# tauri-test-app-2026-02-07

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
api/docs/: aurora-dsql-setup.md  supabase-items-table.sql
api/src/: index.ts  supabase.ts
scripts/: gen-icon.cjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
